--- a/Solana-Group-7/src/main/resources/application.properties
+++ b/Solana-Group-7/src/main/resources/application.properties
@@ -15,3 +15,22 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 server.error.whitelabel.enabled=false
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thanh02062004@gmail.com
+spring.mail.password=mjnh dmor vzdx bwrg
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# basic log level for all messages
+logging.level.org.hibernate=info
+# SQL statements and parameters
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+# Statistics and slow queries
+logging.level.org.hibernate.stat=debug
+logging.level.org.hibernate.SQL_SLOW=info
+
+# 2nd Level Cache
+logging.level.org.hibernate.cache=debug
